--- a/package.json
+++ b/package.json
@@ -1,8 +1,6 @@
 {
   "name": "ogadonate",
   "version": "0.1.0",
-  "homepage": ".",
-  
   "private": true,
   "dependencies": {
     "@coreui/chartjs": "^2.0.0",
@@ -67,26 +65,27 @@
     "build": "react-scripts build webpack --mode production",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-      "dev": "webpack --mode development" 
+    "dev": "webpack --mode development"
   },
-
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
     ]
   },
+  "devDependencies": {
+    "@types/react-redux": "^7.1.16"
+  },
   "browserslist": {
     "production": [
-     "defaults"
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
     ],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/react-redux": "^7.1.16"
   }
 }
