--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "query-string": "^6.13.7",
     "react": "^17.0.1",
     "react-copy-to-clipboard": "^5.0.3",
+    "react-countdown": "^2.3.2",
     "react-country-region-selector": "^3.0.2",
     "react-datepicker": "^3.6.0",
     "react-dom": "^17.0.1",
@@ -77,7 +78,6 @@
   "devDependencies": {
     "@types/react-redux": "^7.1.16"
   },
-
   "browserslist": [
     "> 1%",
     "last 2 versions"
