--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-onclickoutside": "^6.10.0",
     "react-read-more": "^1.0.0",
     "react-redux": "^7.2.0",
+    "react-responsive": "^8.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "react-share": "^4.4.0",
