--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chart.js": "^3.2.1",
     "classnames": "^2.2.6",
     "core-js": "^3.8.1",
+    "history": "^5.0.0",
     "jquery": "^3.6.0",
     "moment": "^2.29.1",
     "numeral": "^2.0.6",
